fixed alignment issues

--- a/src/containers/projects/Projects.css
+++ b/src/containers/projects/Projects.css
@@ -51,13 +51,15 @@
   text-align: right;
   color: var(--text-color);
 }
+.project-item .col:nth-child(2) {
+  justify-content: flex-end;
+}
 .project-image {
   object-fit: cover;
   height: 400px;
   width: 600px;
 }
 .project-link {
-  width: 100%;
   height: 100%;
   transition: opacity 0.3s ease;
 }
@@ -117,3 +119,5 @@
 .project-item .project-details .contributors .contributor-item:first-child {
   margin-left: 0;
 }
+
+/* Media queries */
